--- a/fineroof/app/template/sass/main.scss
+++ b/fineroof/app/template/sass/main.scss
@@ -16,7 +16,13 @@
 @import "layout/gallery";
 @import "layout/footer";
 @import "layout/inner-services";
+@import "layout/catalog-section";
+@import "layout/inner-page";
 
 @import "sections/content";
 @import "sections/navigation";
 @import "sections/feature-list";
+@import "sections/catalog-list";
+@import "sections/card-item";
+@import "sections/card-item";
+@import "sections/breadcrumbs";
