--- a/fineroof/app/template/sass/main.scss
+++ b/fineroof/app/template/sass/main.scss
@@ -18,6 +18,7 @@
 @import "layout/inner-services";
 @import "layout/catalog-section";
 @import "layout/inner-page";
+@import "layout/props-table";
 
 @import "sections/content";
 @import "sections/navigation";
@@ -26,3 +27,4 @@
 @import "sections/card-item";
 @import "sections/card-item";
 @import "sections/breadcrumbs";
+@import "sections/price-tab";
