--- a/fineroof/app/template/sass/main.scss
+++ b/fineroof/app/template/sass/main.scss
@@ -19,6 +19,7 @@
 @import "layout/catalog-section";
 @import "layout/inner-page";
 @import "layout/props-table";
+@import "layout/items-block";
 
 @import "sections/content";
 @import "sections/navigation";
@@ -28,3 +29,4 @@
 @import "sections/card-item";
 @import "sections/breadcrumbs";
 @import "sections/price-tab";
+@import "sections/small-item";
