--- a/fineroof/app/template/sass/base/_general.scss
+++ b/fineroof/app/template/sass/base/_general.scss
@@ -157,6 +157,29 @@ a {
   }
 }
 
+@keyframes leftToLeft {
+  0%,
+	100% {
+    left: 0px;
+  }
+
+  50% {
+    left: -7px
+  }
+}
+
+@keyframes rightToRight {
+  0%,
+	100% {
+    right: 0px;
+  }
+
+  50% {
+    right: -7px
+  }
+}
+
+
 .popup {
 	display: none;
 }
