--- a/fineroof/app/template/sass/components/_button.scss
+++ b/fineroof/app/template/sass/components/_button.scss
@@ -178,3 +178,54 @@
 		}
 	}
 }
+
+.slider-small-arrows {
+	width: calc(100% + 52px);
+
+	display: -webkit-flex;
+	display: -ms-flex;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+
+	z-index: 5;
+	pointer-events: none;
+
+	.slider-control {
+		width: 11px;
+		height: 11px;
+
+		border: 3px solid transparent;
+
+		pointer-events: all;
+
+		cursor: pointer;
+		transition: .3s;
+
+		&.slider-left {
+			border-top-color: #1bc09b;
+			border-left-color: #1bc09b;
+
+			transform: rotate(-45deg);
+			&:hover {
+				animation: leftToLeft 1s 1;
+			}
+
+		}
+		&.slider-right {
+			border-top-color: #1bc09b;
+			border-right-color: #1bc09b;
+
+			transform: rotate(45deg);
+
+			&:hover {
+				animation: rightToRight 1s 1;
+			}
+		}
+	}
+}
