--- a/fineroof/app/template/sass/sections/_content.scss
+++ b/fineroof/app/template/sass/sections/_content.scss
@@ -197,6 +197,9 @@
   font-size: 28px;
   font-weight: 700;
   letter-spacing: 1.4px;
+  &_margin-bottom {
+    margin-bottom: 75px;
+  }
   &_with-margin {
     margin: 66px 0px 76px;
   }
