--- a/fineroof/app/template/sass/main.scss
+++ b/fineroof/app/template/sass/main.scss
@@ -20,6 +20,7 @@
 @import "layout/inner-page";
 @import "layout/props-table";
 @import "layout/items-block";
+@import "layout/card-detail";
 
 @import "sections/content";
 @import "sections/navigation";
