--- a/fineroof/app/template/sass/components/_button.scss
+++ b/fineroof/app/template/sass/components/_button.scss
@@ -195,6 +195,10 @@
 
 	z-index: 5;
 	pointer-events: none;
+	&_min {
+		width: calc(100% + 30px);
+		top: 44%;
+	}
 
 	.slider-control {
 		width: 11px;
@@ -226,6 +230,89 @@
 			&:hover {
 				animation: rightToRight 1s 1;
 			}
+		}
+	}
+}
+
+
+.big-button {
+	min-width: 268px;
+
+	color: #1bc09b;
+	font-size: 28px;
+	font-weight: 700;
+	letter-spacing: 0.7px;
+
+	display: -webkit-flex;
+	display: -ms-flex;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	border: none;
+	border-radius: 9px;
+	background-color: #f1f6f5;
+
+	padding: 21px 60px;
+
+	cursor: pointer;
+	transition: .3s;
+
+	&:hover {
+		background-color: #d8d1cd;
+	}
+}
+
+.back-button {
+	color: #1bc09b;
+	font-size: 12px;
+	font-weight: 700;
+	text-transform: uppercase;
+	letter-spacing: 0.3px;
+
+	display: -webkit-flex;
+	display: -ms-flex;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	border-radius: 6px;
+	border: 2px solid #1bc09b;
+	background-color: #ffffff;
+
+	padding: 8px 24px;
+	margin-top: 36px;
+	transition: .3s;
+	$parent: &;
+	&:hover {
+		& #{$parent}__arrow {
+			margin-left: -5px;
+			margin-right: 16px;
+		}
+	}
+	&__arrow {
+		width: 29px;
+		height: 2px;
+
+		background: #1bc09b;
+
+		margin-right: 11px;
+
+		transition: .3s;
+		&::before {
+			content: '';
+			width: 8px;
+			height: 8px;
+
+			border: 2px solid transparent;
+			border-top-color: #1bc09b;
+			border-left-color: #1bc09b;
+
+			position: absolute;
+			top: 50%;
+			left: 0;
+
+			transform: translateY(-50%) rotate(-45deg);
 		}
 	}
 }
