--- a/fineroof/app/template/sass/sections/_content.scss
+++ b/fineroof/app/template/sass/sections/_content.scss
@@ -161,17 +161,17 @@
 				background-image: url('../img/inner-title-bg1.png');
 			}
 		}
-    &_catalog-second-page {
-      &::before {
-        width: 225px;
-        height: 150px;
+	    &_catalog-second-page {
+	      &::before {
+	        width: 225px;
+	        height: 150px;
 
-      	background-image: url('../img/inner-title3.png');
-        background-position-y: 0.5px;
+	      	background-image: url('../img/inner-title3.png');
+	        background-position-y: 0.5px;
 
-        right: 0;
-      }
-    }
+	        right: 0;
+	      }
+	    }
 		&_catalog-page {
 			&::before {
 				width: 412px;
@@ -181,7 +181,17 @@
 
 				background-position-y: 42px;
 
-        right: 50px;
+			    right: 50px;
+			}
+		}
+		&_facades {
+			&::before {
+				width: 139px;
+				height: 150px;
+
+				background-image: url('../img/products4.png');
+
+				right: 0;
 			}
 		}
 		&_no-border {
@@ -219,7 +229,7 @@
 
 .text-block {
   margin-bottom: 70px;
-  
+
   & p {
     color: #232323;
     font-size: 15px;
