--- a/fineroof/app/template/sass/main.scss
+++ b/fineroof/app/template/sass/main.scss
@@ -21,6 +21,7 @@
 @import "layout/props-table";
 @import "layout/items-block";
 @import "layout/card-detail";
+@import "layout/distributing-page";
 
 @import "sections/content";
 @import "sections/navigation";
