Третий вид отображения каталога

--- a/fineroof/app/template/sass/layout/_catalog-section.scss
+++ b/fineroof/app/template/sass/layout/_catalog-section.scss
@@ -5,6 +5,9 @@
 		display: -ms-flex;
 		display: flex;
 		align-items: center;
+		&_column {
+			flex-direction: column;
+		}
 		&_items {
 			flex-wrap: wrap;
 
