--- a/fineroof/app/template/sass/main.scss
+++ b/fineroof/app/template/sass/main.scss
@@ -34,3 +34,4 @@
 @import "sections/small-item";
 @import "sections/items-slider";
 @import "sections/get-payment";
+@import "sections/catalog-list-item";
