--- a/fineroof/app/template/css/style.css
+++ b/fineroof/app/template/css/style.css
@@ -1854,6 +1854,10 @@ a {
   align-items: center;
 }
 
+.catalog-section__wrapper_column {
+  flex-direction: column;
+}
+
 .catalog-section__wrapper_items {
   flex-wrap: wrap;
   margin: 0px -64px;
@@ -3219,4 +3223,65 @@ a {
   align-items: center;
   justify-content: center;
   margin-bottom: 130px;
+}
+
+.catalog-list-item {
+  display: -ms-flex;
+  display: flex;
+  align-items: flex-start;
+  margin-top: 70px;
+}
+
+.catalog-list-item:last-child {
+  margin-bottom: 70px;
+}
+
+.catalog-list-item__left {
+  width: 143px;
+  height: 143px;
+  display: -ms-flex;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  margin-right: 56px;
+}
+
+.catalog-list-item__left img {
+  display: block;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.catalog-list-item__name {
+  color: #232323;
+  font-size: 17px;
+  font-weight: 500;
+  letter-spacing: 0.42px;
+  border-bottom: 5px solid #1bc09b;
+  padding-bottom: 22px;
+  margin-bottom: 37px;
+}
+
+.catalog-list-item__desc {
+  display: -ms-flex;
+  display: flex;
+  align-items: flex-start;
+}
+
+.catalog-list-item__button {
+  flex-shrink: 0;
+  margin-right: 24px;
+}
+
+.catalog-list-item__text {
+  color: #222222;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: 0.33px;
+}
+
+.catalog-list-item__text p:first-child {
+  margin-top: 0;
 }
